src/Style/App.css
*{
  padding: 0;
  margin: 0;
  background-color: #1C3031;
}

.App{
  min-height: 100vh;
}

.Header-Wrap{
  height: 150px;
  width: 100%;
  display: flex;
  justify-content: space-between;

}

.Logo-Css{
  margin: 20px;
}

.animasi-text{
  font-size: 34px;
  font-weight: 600;
  min-width: 280px;
  color: #ffffff;
  margin-top: 40px;
  margin-right: 20px;
}

.animasi-text span{
  position: relative;
}

.animasi-text span::before{
  content: "Welcome to WiTiAx";
  color: #ffffff;
  animation: words 40s infinite;
}

.animasi-text span::after{
  content: "";
  position: absolute;
  width: calc(100% + 8px);
  height: 50px;
  background-color: #163131;
  border-left: 2px solid #ffffff;
  right: -8px;
  animation: cursor .8s infinite, typing 40s steps(20) infinite;
}

@keyframes cursor {
  to{
      border-left: 2px solid #ff7f5000;
  }
}

@keyframes words {
  0%,20%{
      content: "Welcome to WiTiAx";
  }
  21%,40%{
      content: "Stay Healthy";
  }
  41%,60%{
      content: "Take Care";
  }
  61%,80%{
      content: "Stay Positive!";
  }
}

@keyframes typing {
  10%,15%,30%,35%,50%,55%,70%,75%,90%,95%{
      width: 0;
  }
  5%,20%,25%,40%,45%,60%,65%,80%,85%{
      width: calc(100% + 8px);
  }
}

.DropDown{
  margin-left: 70px;
}

.DropDown h1{
  color: white;
  margin-bottom: 30px;
}

.link{
  text-decoration: none;
}

.libutton{
  background-color: white;
}

.middle-wrapper{
  width: 100%;
  height: 400px;
  display: flex;
  gap: 40px;
  justify-content: center;
}

.Card{
  height: 300px;
  width: 30%;
  margin-top: 40px;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}

.Card2{
  height: 150px;
  width: 99.7%;
  background-color: white;
  display: flex;
  justify-content: center;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  border: 1px solid black;
}

.Card2 h1{
  color: black;
  text-align: center;
  margin-top: 50px;
  font-size: 40px;
  background-color: #ffffff;
}

.Card3-Wrapper{
  display: flex;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}

.Card3{
  width: 50%;
  height: 150px;
  background-color: white;
  border-bottom-left-radius: 15px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
}

.Card3 h1{
  margin-top: 47px;
  background-color: white;
  font-size: 40px;
}

.Card4{
  width: 50%;
  height: 150px;
  background-color: red;
  border-bottom-right-radius: 15px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
}

.Card4 h1{
  background-color: red;
  margin-top: 47px;
}

.Card5{
  width: 50%;
  height: 150px;
  background-color: yellow;
  border-bottom-right-radius: 15px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
}

.Card5 h1{
  background-color: yellow;
  margin-top: 47px;
}

.Card6{
  width: 50%;
  height: 150px;
  background-color: green;
  border-bottom-right-radius: 15px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
}

.Card6 h1{
  background-color: green;
  margin-top: 47px;
}

.Card7{
  width: 50%;
  height: 150px;
  background-color: rgb(52, 152, 209);
  border-bottom-right-radius: 15px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
}

.Card7 h1{
  background-color: rgb(52, 152, 209);
  margin-top: 47px;
}

.Time{
  color: white;
  margin-left: 70px;
  font-size: 20px;
}

.Footer-Wrap{
  position: sticky;
  background-color: #1C3031;
  height: 200px;
  top: 100%;
  display: flex;
  justify-content: center;
}

.Footer-Wrap h1{
  color: white;
  margin-top: 130px;
  background-color: #1C3031;
  font-size: 20px;
}

@media screen and (max-width: 1050px){
.middle-wrapper{
    width: 100%;
    height: 1000px;
    display: list-item;
  }

  .Card{
    margin-left: 25%;
    width: 500px;
  }
}

@media screen and (max-width: 900px){  
    .Card{
      margin-left: 20%;
      width: 500px;
    }
  } 

@media screen and (max-width: 720px){  
  .Card{
    margin-left: 15%;
    width: 500px;
  }
} 

@media screen and (max-width: 590px){  
  .Card{
    margin-left: 4%;
    width: 500px;
  }
} 

@media screen and (max-width: 530px){  
  .Card{
    margin-left: 6%;
    width: 380px;
  }

  .Time{
    color: white;
    margin-left: 10px;
    font-size: 15px;
  }

  .DropDown{
    margin-left: 20px;
  }

  .animasi-text{
    font-size: 25px;
  }
} 

@media screen and (max-width: 450px){  
  .Card{
    margin-left: 4.5%;
    width: 380px;
  }

  .Time{
    color: white;
    margin-left: 10px;
    font-size: 15px;
  }

  .DropDown{
    margin-left: 20px;
  }

  .animasi-text{
    font-size: 25px;
  }
} 

@media screen and (max-width: 400px){  
  .Card{
    margin-left: 2%;
    width: 380px;
  }

  .Time{
    color: white;
    margin-left: 10px;
    font-size: 15px;
  }

  .DropDown{
    margin-left: 20px;
  }

  .animasi-text{
    font-size: 20px;
  }
} 

@media screen and (max-width: 380px){  
  .Card{
    margin-left: 2%;
    width: 365px;
  }

  .Time{
    color: white;
    margin-left: 10px;
    font-size: 15px;
  }

  .DropDown{
    margin-left: 20px;
  }

  .animasi-text{
    font-size: 20px;
  }
} 

@media screen and (max-width: 375px){  
  .Card{
    margin-left: 1%;
    width: 365px;
  }

  .Time{
    color: white;
    margin-left: 10px;
    font-size: 15px;
  }

  .DropDown{
    margin-left: 20px;
  }

  .animasi-text{
    font-size: 20px;
  }
} 

